# FriendlyHandbook

./: README.md  setup.py
FriendlyHandbook_kobSK/: Dockerfile  adbook.py  calculator.py  main.py  note_book.py  pyproject.toml
